Se crea la tabla inventario, se crea el script de base de datos en Web-Common para este punto.

--- a/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
+++ b/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
@@ -16,4 +16,10 @@
     <SecondMenu text="Controls" url="~/Mantenimiento/Wtf_Controles/Index" Permission="sysuser.tools" />
     <!--<SecondMenu text="Bases" url="~/Mantenimiento/Wtf_Ubicaciones/Index" Permission="sysuser.tools" />-->
   </FirstMenu>
+  <FirstMenu text="Ganaderia" icon="icon_menu_sys">
+    <SecondMenu text="Finca" url="~/Ganaderia/Gnd_Finca/Index" Permission="sysuser.tools" />
+    <SecondMenu text="Propietario" url="~/Ganaderia/Gnd_Propietario/Index" Permission="sysuser.tools" />
+    <SecondMenu text="Inventario" url="~/Ganaderia/Gnd_Inventario/Index" Permission="sysuser.tools" />
+    <SecondMenu text="Demo" url="~/Demo/UploadFileForm" Permission="sysuser.tools" />
+  </FirstMenu>
 </SysMenu>
