Ajustes para fechas de estados de ganado

--- a/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
+++ b/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
@@ -20,6 +20,6 @@
     <SecondMenu text="Finca" url="~/Ganaderia/Gnd_Finca/Index" Permission="sysuser.tools" />
     <SecondMenu text="Propietario" url="~/Ganaderia/Gnd_Propietario/Index" Permission="sysuser.tools" />
     <SecondMenu text="Inventario" url="~/Ganaderia/Gnd_Inventario/Index" Permission="sysuser.tools" />
-    <SecondMenu text="Demo" url="~/Demo/UploadFileForm" Permission="sysuser.tools" />
+    <!--<SecondMenu text="Demo" url="~/Demo/UploadFileForm" Permission="sysuser.tools" />-->
   </FirstMenu>
 </SysMenu>
