Ajustes de visualizacion

--- a/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
+++ b/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
@@ -9,13 +9,13 @@
   <!--<FirstMenu text="项目" icon="icon_menu_sys">
     <SecondMenu text="测试" url="~/ProjectManage/Dev_Project/Index" Permission="" />
   </FirstMenu>-->
-  <FirstMenu text="Maintenance" icon="icon_menu_sys">
-    <SecondMenu text="Tools" url="~/Mantenimiento/Wtf_Herramientas/Index" Permission="sysuser.tools" />
-    <SecondMenu text="Groups" url="~/Mantenimiento/Wtf_TipoHerramienta/Index" Permission="sysuser.tools" />
+  <!--<FirstMenu text="Maintenance" icon="icon_menu_sys">-->
+    <!--<SecondMenu text="Tools" url="~/Mantenimiento/Wtf_Herramientas/Index" Permission="sysuser.tools" />-->
+    <!--<SecondMenu text="Groups" url="~/Mantenimiento/Wtf_TipoHerramienta/Index" Permission="sysuser.tools" />-->
     <!--<SecondMenu text="Clases H." url="~/Mantenimiento/Wtf_ClaseHerramienta/Index" Permission="sysuser.tools" />-->
-    <SecondMenu text="Controls" url="~/Mantenimiento/Wtf_Controles/Index" Permission="sysuser.tools" />
+    <!--<SecondMenu text="Controls" url="~/Mantenimiento/Wtf_Controles/Index" Permission="sysuser.tools" />-->
     <!--<SecondMenu text="Bases" url="~/Mantenimiento/Wtf_Ubicaciones/Index" Permission="sysuser.tools" />-->
-  </FirstMenu>
+  <!--</FirstMenu>-->
   <FirstMenu text="Ganaderia" icon="icon_menu_sys">
     <SecondMenu text="Finca" url="~/Ganaderia/Gnd_Finca/Index" Permission="sysuser.tools" />
     <SecondMenu text="Propietario" url="~/Ganaderia/Gnd_Propietario/Index" Permission="sysuser.tools" />
