Ajustes de consecutivo, lista de padres  e inventario por usuario

--- a/Coldairarrow.Web/appsettings.json
+++ b/Coldairarrow.Web/appsettings.json
@@ -8,8 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //SQLServer
-    "BaseDb": "Data Source=DESKTOP-DJVB5RT\\SQLEXPRESS;Initial Catalog=Ganaderia;Integrated Security=False; User ID=chbootreader;Password=8v.hL3#Zkw5eR"
+    "BaseDb": "Data Source=DESKTOP-DJVB5RT\\SQLEXPRESS;Initial Catalog=Ganaderia;Integrated Security=False; User ID=chbootreader;Password=8v.hL3#Zkw5eR",
     //"BaseDb": "Data Source=SQL5102.site4now.net;Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=db_a78569_adminlte_admin;Password=k0sEr.4sw_gdRy6"
+    //"BaseDb": "Data Source=SQL5109.site4now.net;Initial Catalog=db_a78569_ganaderia;Integrated Security=False; User ID=db_a78569_ganaderia_admin;Password=k0sEr@4sw_gdRy6"
     //PostgreSQL
     //"BaseDb": "SERVER=localhost;PORT=5432;DATABASE=Coldairarrow.Fx.Net.Easyui.GitHub;USER ID=postgres;PASSWORD=root"
     //MySQl
