Ajuste para que la ruta de descarga se configure desde appsettings

--- a/Coldairarrow.Web/appsettings.json
+++ b/Coldairarrow.Web/appsettings.json
@@ -7,11 +7,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //SQLServer
-    "BaseDb": "Data Source=SQL5102.site4now.net;Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=db_a78569_adminlte_admin;Password=k0sEr.4sw_gdRy6"
+    //"BaseDb": "Data Source=SQL5102.site4now.net;Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=db_a78569_adminlte_admin;Password=k0sEr.4sw_gdRy6"
+    "BaseDb": "Data Source=apinetcore.database.windows.net;Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=lte_admin;Password=m#7qZ.W8&gJ3f"
     //PostgreSQL
     //"BaseDb": "SERVER=localhost;PORT=5432;DATABASE=Coldairarrow.Fx.Net.Easyui.GitHub;USER ID=postgres;PASSWORD=root"
     //MySQl
     //"BaseDb": "server=127.0.0.1;user id=root;password=root;persistsecurityinfo=True;database=coldairarrow.fx.net.easyui.github;SslMode=none"
     //"BaseDb_Test": "Data Source=.;Initial Catalog=Coldairarrow.Fx.Net.Easyui.GitHub;Integrated Security=True"
-  }
+  },
+  "publishUrl": "https://portalservicioshqms.azurewebsites.net"
 }
