Ajuste en el reporte de familia de herramienta y adicion de campo estado en la herramienta.

--- a/Coldairarrow.Web/appsettings.json
+++ b/Coldairarrow.Web/appsettings.json
@@ -8,7 +8,8 @@
   "ConnectionStrings": {
     //SQLServer
     //"BaseDb": "Data Source=SQL5102.site4now.net;Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=db_a78569_adminlte_admin;Password=k0sEr.4sw_gdRy6"
-    "BaseDb": "Data Source=apinetcore.database.windows.net;Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=lte_admin;Password=m#7qZ.W8&gJ3f"
+    //"BaseDb": "Data Source=apinetcore101.database.windows.net;Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=lte_admin;Password=m#7qZ.W8&gJ3f",
+    "BaseDb": "Data Source=DESKTOP-0TUTBJC\\SQLEXPRESS; Initial Catalog=db_a78569_adminlte;Integrated Security=False; User ID=chbootreader;Password=8v.hL3#Zkw5eR"
     //PostgreSQL
     //"BaseDb": "SERVER=localhost;PORT=5432;DATABASE=Coldairarrow.Fx.Net.Easyui.GitHub;USER ID=postgres;PASSWORD=root"
     //MySQl
