Ajuste de Permisos de usuario por ubicacion para las herramientas

--- a/Coldairarrow.Web/wwwroot/Config/Permission.config
+++ b/Coldairarrow.Web/wwwroot/Config/Permission.config
@@ -19,4 +19,16 @@
   <module value="sysLog" name="Log Sistema">
     <permission value="search" name="Ver" />
   </module>
+    <module value="operTools" name="Herramientas">
+	    <permission value="search" name="Ver" />
+	    <permission value="manage" name="Admin" />
+    </module>
+	<module value="operGroups" name="Grupos">
+		<permission value="search" name="Ver" />
+		<permission value="manage" name="Admin" />
+	</module>
+	<module value="operControls" name="Controles">
+		<permission value="search" name="Ver" />
+		<permission value="manage" name="Admin" />
+	</module>
 </configuration>
