--- a/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
+++ b/Coldairarrow.Web/wwwroot/Config/SystemMenu.config
@@ -10,10 +10,10 @@
     <SecondMenu text="测试" url="~/ProjectManage/Dev_Project/Index" Permission="" />
   </FirstMenu>-->
   <FirstMenu text="Maintenance" icon="icon_menu_sys">
-    <SecondMenu text="Tools" url="~/Mantenimiento/Wtf_Herramientas/Index" Permission="sysuser.tools" />
-    <SecondMenu text="Groups" url="~/Mantenimiento/Wtf_TipoHerramienta/Index" Permission="sysuser.tools" />
+    <SecondMenu text="Tools" url="~/Mantenimiento/Wtf_Herramientas/Index" Permission="operTools.search" />
+    <SecondMenu text="Groups" url="~/Mantenimiento/Wtf_TipoHerramienta/Index" Permission="operGroups.search" />
     <!--<SecondMenu text="Clases H." url="~/Mantenimiento/Wtf_ClaseHerramienta/Index" Permission="sysuser.tools" />-->
-    <SecondMenu text="Controls" url="~/Mantenimiento/Wtf_Controles/Index" Permission="sysuser.tools" />
+    <SecondMenu text="Controls" url="~/Mantenimiento/Wtf_Controles/Index" Permission="operControls.search" />
     <!--<SecondMenu text="Bases" url="~/Mantenimiento/Wtf_Ubicaciones/Index" Permission="sysuser.tools" />-->
   </FirstMenu>
 </SysMenu>
